--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,6 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+sample videos/Dropping_an_Object.MOV
+sample videos/IMG_1993.mp4
+sample videos/IMG_3795.MOV
